# geometric-spanners

./: .gitignore  .gitmodules  Analysis.h  Bad_PointSet.txt  CMakeLists.txt  Experiment.h  ExperimentPointsets.xml  GeometricSpanners.cbp  GeometricSpanners.depend  GeometricSpanners.layout  LICENSE.txt  README.md  RealWorldPointsets.xml  Scratch.h  bcc2012  experiment.xml  improvements.txt  main.cpp  real.xml  test.xml
Qt/GraphUI/: AlgorithmEvent.h  CMakeLists.txt  DelaunayGraph.h  GeometricSpannerPrinter.h  PlanarSpanner.h  PolygonSpanner.h  SpanningGraph.h  TransformPolygon.h  graphedge.h  graphfocus.cpp  graphitem.cpp  graphscene.cpp  graphscene.h  graphvertex.cpp  graphvertex.h  graphview.h  mainwindow.cpp  mainwindow.h
Qt/GraphUI/pointsets/: 500_random_in_square_uniform  50_random_in_square_uniform
algorithms/: BCC2012.h  BGHP2010.h  BGS2005.h  BHS2018.h  BSX2009.h  BoundedDegreePlaneSpanners.h
cmake/: GeometricSpannersConfig.cmake
include/: Analysis.h  BCC2012.h  BGHP2010.h  BGS2002.h  BGS2005.h  BHS2017.h  BKPX2015.h  BSX2009.h  CGALComponents.h  CgalComponents.h  DelaunayGraph.h  Experiment.h  FloydWarshall.h  GeometricSpannerExperiment.h  GeometricSpannerPrinter.h  GeometricSpannerSolutionChecker.h  Graph.h  GraphAlgoTV.h  GraphAlgorithmEvent.h  Greedy.h  KPT2017.h  KPX2010.h  KX2012.h  LW2004.h  LW2004_2.h  LW2004_3.h  LatexPrinter.h  LineGraphPrinter.h  Names.h  PlanarSpanner.h  PointGenerators.h  PolygonSpanner.h  Result.h  Scratch.h  SpanningGraph.h  SplitVertex.h  StretchFactor.h  TDDelaunay.h  TablePrinter.h  Timer.h  (+7 more)
include/algorithms/: BCC2012.h  BGHP2010.h  BGS2005.h  BHS2018.h  BKPX2015.h  BSX2009.h  BoundedDegreePlaneSpanners.h  Degree3.h  KPT2017.h  KPX2010.h  KX2012.h  LW2004.h
include/printers/: GraphPrinter.h  LatexPrinter.h  PgfplotPrinter.h  TablePrinter.h
include/tools/: Delaunay.h  DelaunayGraph.h  DelaunayL2.h  DelaunayTD.h  FloydWarshall.h  Metrics.h  PointGenerators.h  Results.h  StretchFactorExact.h  StretchFactorExperimental.h  TDDelaunay.h  Utilities.h
qt/: CMakeLists.txt  graphedge.cpp  graphfocus.h  graphitem.h  graphscene.cpp.autosave  graphscene.h  graphvertex.h  graphview.cpp  graphview.h  graphview.h.autosave  mainwindow.cpp  playbackparameters.cpp  playbackparameters.h
qt/cmake/: FindGEOMETRICSPANNERS.cmake  FindGMP.cmake  FindMPFR.cmake
src/: Analysis.h  DelaunayGraph.cpp  Experiment.h  GeometricSpannerExperiment.cpp  GeometricSpannerPrinter.cpp  GeometricSpannerSolutionChecker.cpp  Graph.cpp  Greedy.cpp  PlanarSpanner.cpp  PolygonSpanner.cpp  Results.h  Scratch.h  SpanningGraph.cpp  TransformPolygon.cpp
tools/: DelaunayL2.h  DelaunayLinf.h  DelaunayTD.h  FloydWarshall.h  Metrics.h  PointGenerators.h  Results.h  StretchFactorExact.h  StretchFactorExperimental.h  Utilities.h
tools/printers/: GraphPrinter.h  LatexPrinter.h  PgfplotPrinter.h  TablePrinter.h
